--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ description: CS student (TU Graz / Bristol University)
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/16375819?s=460&v=4
 
+# Show future-dated posts (timezone issues if not UTC)
+future: true
+
 #
 # Flags below are optional
 #
