--- a/_data/sliders.yml
+++ b/_data/sliders.yml
@@ -156,8 +156,30 @@
   captions: false
   images:
     - src: /images/balkans/1.jpg
+    - src: /images/balkans/2.jpg
+    - src: /images/balkans/3.jpg
+    - src: /images/balkans/4.jpg
+    - src: /images/balkans/5.jpg
+    - src: /images/balkans/6.jpg
+    - src: /images/balkans/7.jpg
+    - src: /images/balkans/8.jpg
+    - src: /images/balkans/9.jpg
+    - src: /images/balkans/10.jpg
+    - src: /images/balkans/11.jpg
+    - src: /images/balkans/12.jpg
+    - src: /images/balkans/13.jpg
+    - src: /images/balkans/14.jpg
+    - src: /images/balkans/15.jpg
+    - src: /images/balkans/16.jpg
+    - src: /images/balkans/17.jpg
+    - src: /images/balkans/18.jpg
+    - src: /images/balkans/19.jpg
+    - src: /images/balkans/20.jpg
+    - src: /images/balkans/21.jpg
+    - src: /images/balkans/22.jpg
+    - src: /images/balkans/23.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
 
 # UBES slider
