--- a/_data/sliders.yml
+++ b/_data/sliders.yml
@@ -14,7 +14,7 @@
     - src: /images/hadrians/10.jpg
     - src: /images/hadrians/11.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
 
 # jmt slider
@@ -71,7 +71,7 @@
     - src: /images/lofoten/10.jpg
     - src: /images/lofoten/11.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
 
 # chamonix slider
@@ -110,17 +110,22 @@
     - src: /images/georgia/11.jpg
     - src: /images/georgia/12.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
 
 # wester ross slider
-# TODO
 - selector: wester_slider
   captions: false
   images:
     - src: /images/wester/1.jpg
+    - src: /images/wester/1.jpg
+    - src: /images/wester/1.jpg
+    - src: /images/wester/1.jpg
+    - src: /images/wester/1.jpg
+    - src: /images/wester/1.jpg
+    - src: /images/wester/1.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
 
 # austria slider
@@ -130,7 +135,35 @@
   images:
     - src: /images/austria/1.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
+    effect: "'fade'"
+
+# cape wrath slider
+- selector: wrath_slider
+  captions: false
+  images:
+    - src: /images/wrath/2.jpg
+    - src: /images/wrath/3.jpg
+    - src: /images/wrath/4.jpg
+    - src: /images/wrath/5.jpg
+    - src: /images/wrath/6.jpg
+    - src: /images/wrath/7.jpg
+    - src: /images/wrath/8.jpg
+    - src: /images/wrath/9.jpg
+    - src: /images/wrath/10.jpg
+    - src: /images/wrath/1.jpg
+  settings:
+    height: "'16:9'"
+    effect: "'fade'"
+
+# kungsleden slider
+# TODO
+- selector: kungsleden_slider
+  captions: false
+  images:
+    - src: /images/kungsleden/1.jpg
+  settings:
+    height: "'16:9'"
     effect: "'fade'"
 
 # armenia alaverdi-dilijan slider
@@ -147,11 +180,10 @@
     - src: /images/armenia/8.jpg
     - src: /images/armenia/9.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
 
 # balkans slider
-# TODO
 - selector: balkans_slider
   captions: false
   images:
@@ -208,5 +240,5 @@
     - src: /images/ubes/20.jpg
     - src: /images/ubes/21.jpg
   settings:
-    height: "'auto'"
+    height: "'16:9'"
     effect: "'fade'"
