--- a/_data/sliders.yml
+++ b/_data/sliders.yml
@@ -162,6 +162,17 @@
   captions: false
   images:
     - src: /images/kungsleden/1.jpg
+    - src: /images/kungsleden/2.jpg
+    - src: /images/kungsleden/3.jpg
+    - src: /images/kungsleden/4.jpg
+    - src: /images/kungsleden/5.jpg
+    - src: /images/kungsleden/6.jpg
+    - src: /images/kungsleden/7.jpg
+    - src: /images/kungsleden/8.jpg
+    - src: /images/kungsleden/9.jpg
+    - src: /images/kungsleden/10.jpg
+    - src: /images/kungsleden/11.jpg
+    - src: /images/kungsleden/12.jpg
   settings:
     height: "'16:9'"
     effect: "'fade'"
