--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Cat Easdon
 
 # Short bio or description (displayed in the header)
-description: CS PhD Student (Microarchitectural Security) at Graz University of Technology
+description: Microarchitectural Security Researcher at Graz University of Technology
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/16375819?s=460&v=4
